# bpm-system

./: .gitignore  README.md
api_calls/src/camunda-platform-rest-api-client/: README.md  pyproject.toml
api_calls/src/camunda-platform-rest-api-client/camunda_platform_rest_api_client/: __init__.py
api_calls/src/camunda-platform-rest-api-client/camunda_platform_rest_api_client/models/: __init__.py  abstract_set_removal_time_dto.py  activity_instance_incident_dto.py  activity_statistics_result_dto.py  annotation_dto.py  atom_link.py  attachment_dto.py  authentication_result.py  authorization_exception_dto.py  basic_user_credentials_dto.py  batch_dto.py  batch_statistics_dto.py  case_definition_dto.py  check_password_policy_result_dto.py  check_password_policy_rule_dto.py  comment_dto.py  complete_external_task_dto.py  complete_external_task_dto_local_variables.py  complete_external_task_dto_variables.py  complete_response_200.py  complete_task_dto.py  complete_task_dto_variables.py  condition_query_parameter_dto.py  condition_query_parameter_dto_operator.py  condition_query_parameter_dto_value.py  correlation_message_dto.py  correlation_message_dto_correlation_keys.py  correlation_message_dto_local_correlation_keys.py  correlation_message_dto_process_variables.py  correlation_message_dto_process_variables_local.py  count_result_dto.py  create_incident_dto.py  decision_definition_diagram_dto.py  decision_definition_dto.py  decision_requirements_definition_dto.py  deployment_dto.py  deployment_resource_dto.py  deployment_with_definitions_dto.py  (+202 more)
bpm-engine/: README.md
(+391 files in other folders)
